src/test/resources/expected/test-exception-23.kore.golden
Parse error: ../src/test/resources//test-exception-23.kore:5:12:
  |
5 |   symbol a{#b}() : n []
  |            ^
genericIdRawParser: Invalid first character '#'.
